# ACIT-2911-Agile-Development-Project

./: .gitignore  README.md  app.py  config.py  index.html  main.py  pyproject.toml
Flask_API/: __init__.py
Flask_API/marketplace/: __init__.py  routes.py
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: login.html  register.html
css/: styles.css
templates/: index.html
